--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "AmericanText";
-    src: url(/police/AmericanText.ttf) format("truetype");
+    src: url(police/AmericanText.ttf) format("truetype");
 }
 
 
@@ -18,50 +18,56 @@ body{
     padding: 0%;
     width: 100%;
     height: auto;
-
+ 
 }
 
 
 #top_menu{
     width:100%;
-    height: 13vw;
+    height: 15vw;
     background-color: black;
     color: rgb(53, 30, 30);
     text-align: center;
     font-size: 1vw;
+    float: none;
 }
 
-#top_logo{
-    border: 0.5vw dashed  rgb(53, 30, 30);
-    background-color: rgb(53, 30, 50);
-    border-radius: 100%;
-    margin-left: 1vw;
-    margin-right: 90vw;
-    margin-top: 1vw;
-    position: absolute;
-}
 
 #logo{
+    float: left;
     width: 5vw;
     height: 5vw;
+    margin-top: -5vw;
+    margin-left: 1vw;
+    border: 0.5vw dashed red;
+    border-radius: 100%;
+    background-color: white;
+    
 }
 
 #top_titre{
     color: rgb(71, 32, 32);
     font-size: 4vw;
     font-family: "AmericanText";
-    position: relative;
-    margin-top: 0vw;
-    margin-left: 30vw;
-    margin-right: 30vw;
-
+    padding: auto;
+    margin-top: 5vw;
        
 }
 
+
+#top_slogan{
+    color: rgb(71, 32, 32);
+    font-size: 2vw;
+    font-family: "AmericanText";
+    text-align: center;
+    margin-right: 21vw;
+    text-decoration: underline;   
+}
 #top_social{
     float: right;
-    margin-top: -6vw;
-    margin-right: 1.5vw;
+    margin-right: 1vw;
+    margin-top: -7vw;
+
 }
 
 .social_menu{
@@ -83,13 +89,13 @@ display: inline-block;
 }
 
 #sous_menu_1{
-    margin-top: 3vw;
     float: left;
-    margin-left: -5vw;
+    margin-top: 4.0vw;
+    margin-left: -3vw;
 }
   .sous_menu_li{
     display: inline;
-    padding-left:5vw ;
+    padding-left:2vw ;
   }
 
     .sous_menu_a {
@@ -103,7 +109,6 @@ display: inline-block;
     text-decoration: none;
     font-family: "AmericanText";
     font-size: 2vw;
-    margin-bottom: -5vw;
     
 }
 
