--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 header{
     margin: 0%;
     padding: 0%;
-    width: 100%;
+    width: auto;
     height: auto;
 
 }
@@ -16,7 +16,7 @@ header{
 body{
     margin: 0%;
     padding: 0%;
-    width: 100%;
+    width: auto;
     height: auto;
  
 }
