--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@
 }
 
 
+.underline{
+    width: 100%;
+    height: 0.5vw;
+    background-color: rgb(53, 30, 30);
+    margin-top: 0vw;
+    
+}
 
 header{
     margin: 0%;
@@ -117,8 +124,11 @@ display: inline-block;
     display: inline-block;
     border-top: 0.2vw solid white;
     border-left: 0.2vw solid white;
-    border-right:0.2vw solid white;
-    border-radius: 10%;
+    border-right: 0.2vw solid white;
+    border-top-left-radius: 16%;
+    border-top-right-radius: 16%;
+    border-bottom-left-radius:15%;
+    border-bottom-right-radius:15%;
     background-color: rgb(53, 30, 30);
     color: white;
     text-decoration: none;
@@ -127,6 +137,59 @@ display: inline-block;
     
 }
 
-#carrousel_build{
-    text-align: left ;
-}
+
+#carou {
+    position: relative;
+    width: 20vw;
+    margin: 100px auto 0 auto;
+    perspective: 1000px;
+  
+  }
+  
+  #carou_1 {
+    width: 100%;
+    height: 10vh;
+    transform-style: preserve-3d; 
+    animation: rotate360 60s infinite forwards linear;
+  }
+  .carou_face { 
+    position: absolute;
+    width: 17vw;
+    height: 20vh;
+    background-size: cover;
+    box-shadow:inset 0 0 0 2000px rgb(71, 32, 32, 0.5);
+    display: flex;
+  }
+  
+ .carou_face>span{
+     margin: 4vw  5vw;
+    font-size: 1.5vw;
+  }
+  
+  
+  .carou_face:nth-child(1) {
+    transform: rotateY(  0deg) translateZ(430px); }
+  .carou_face:nth-child(2) { 
+
+    transform: rotateY(50deg) translateZ(430px); }
+  .carou_face:nth-child(3) {
+    transform: rotateY( 100deg) translateZ(430px); }
+  .carou_face:nth-child(4) {
+    transform: rotateY(150deg) translateZ(430px); }
+  .carou_face:nth-child(5) { 
+   transform: rotateY(200deg) translateZ(430px); }
+  .carou_face:nth-child(6) { 
+    transform: rotateY(250deg) translateZ(430px); }
+    .carou_face:nth-child(7) { 
+    transform: rotateY(300deg) translateZ(430px); }
+  
+  
+  @keyframes rotate360 {
+    from {
+      transform: rotateY(0deg);
+    }
+    to {
+      transform: rotateY(-360deg);
+    }
+  }
+  
