--- a/style.css
+++ b/style.css
@@ -138,53 +138,72 @@ display: inline-block;
 }
 
 
+
+
 #carou {
     position: relative;
-    width: 20vw;
-    margin: 100px auto 0 auto;
+    width: 320px;
+    margin: 0 auto 0 auto;
     perspective: 1000px;
-  
+    
   }
   
   #carou_1 {
-    width: 100%;
-    height: 10vh;
-    transform-style: preserve-3d; 
-    animation: rotate360 60s infinite forwards linear;
-  }
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d; 
+  animation: rotate360 60s infinite forwards linear;
+}
   .carou_face { 
     position: absolute;
-    width: 17vw;
-    height: 20vh;
+    width: 300px;
+    height: 187px;
+    top: 0px;
+    left:3vw;
+    right: 3vw;
     background-size: cover;
-    box-shadow:inset 0 0 0 2000px rgb(71, 32, 32, 0.5);
+    box-shadow:inset 0 0 0 2000px rgba(0,0,0,0.5);
     display: flex;
   }
   
- .carou_face>span{
-     margin: 4vw  5vw;
-    font-size: 1.5vw;
+  .carou_face > span {
+    margin: auto;
+    font-size: 2vw;
   }
   
   
   .carou_face:nth-child(1) {
+    background-image: url("https://images.pexels.com/photos/1141853/pexels-photo-1141853.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
     transform: rotateY(  0deg) translateZ(430px); }
   .carou_face:nth-child(2) { 
-
-    transform: rotateY(50deg) translateZ(430px); }
+    background-image: url("https://images.pexels.com/photos/1258865/pexels-photo-1258865.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+      transform: rotateY( 40deg) translateZ(430px); }
   .carou_face:nth-child(3) {
-    transform: rotateY( 100deg) translateZ(430px); }
+    background-image: url("https://images.pexels.com/photos/808466/pexels-photo-808466.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+    transform: rotateY( 80deg) translateZ(430px); }
   .carou_face:nth-child(4) {
-    transform: rotateY(150deg) translateZ(430px); }
+    background-image: url("https://images.pexels.com/photos/1394841/pexels-photo-1394841.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+    transform: rotateY(120deg) translateZ(430px); }
   .carou_face:nth-child(5) { 
-   transform: rotateY(200deg) translateZ(430px); }
+    background-image: url("https://images.pexels.com/photos/969679/pexels-photo-969679.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+   transform: rotateY(160deg) translateZ(430px); }
   .carou_face:nth-child(6) { 
-    transform: rotateY(250deg) translateZ(430px); }
-    .carou_face:nth-child(7) { 
-    transform: rotateY(300deg) translateZ(430px); }
+    background-image: url("https://images.pexels.com/photos/1834400/pexels-photo-1834400.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+   transform: rotateY(200deg) translateZ(430px); }
+  .carou_face:nth-child(7) { 
+    background-image: url();
+   transform: rotateY(240deg) translateZ(430px); }
+  .carou_face:nth-child(8) {
+    background-image: url("https://images.pexels.com/photos/135018/pexels-photo-135018.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+    transform: rotateY(280deg) translateZ(430px); }
+  .carou_face:nth-child(9) {
+    background-image: url("https://images.pexels.com/photos/1175135/pexels-photo-1175135.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+    transform: rotateY(320deg) translateZ(430px); }
   
   
-  @keyframes rotate360 {
+  
+  @keyframes rotate360{
     from {
       transform: rotateY(0deg);
     }
@@ -193,3 +212,11 @@ display: inline-block;
     }
   }
   
+
+
+  #underline_1{
+    width: 100%;
+    height: 0.5vw;
+    background-color: rgb(53, 30, 30);
+    margin-top: 19.5vw;
+  }
