--- a/style.css
+++ b/style.css
@@ -137,6 +137,12 @@ display: inline-block;
     
 }
 
+#bg_1{
+    background-color: black;
+    position: relative;
+    width: 100%;
+    height: 16vw;
+}
 
 
 
@@ -157,19 +163,20 @@ display: inline-block;
 }
   .carou_face { 
     position: absolute;
-    width: 300px;
-    height: 187px;
-    top: 0px;
+    width: 15vw;
+    height: 15vh;
+    top: 1vw;
     left:3vw;
     right: 3vw;
     background-size: cover;
-    box-shadow:inset 0 0 0 2000px rgba(0,0,0,0.5);
+    box-shadow:inset 0 0 0 1500px rgba(0,0,0,0.5);
     display: flex;
   }
   
   .carou_face > span {
     margin: auto;
     font-size: 2vw;
+    color: white;
   }
   
   
@@ -214,9 +221,8 @@ display: inline-block;
   
 
 
-  #underline_1{
+  #underline_0{
     width: 100%;
     height: 0.5vw;
     background-color: rgb(53, 30, 30);
-    margin-top: 19.5vw;
   }
