--- a/style.css
+++ b/style.css
@@ -139,86 +139,74 @@ display: inline-block;
 
 #bg_1{
     background-color: black;
-    position: relative;
-    width: 100%;
-    height: 16vw;
+    height: 22vh;
+    width: auto;
+}
+.pic{
+    background-color: black;
+    height: 20vh;
+    width: 30vw;
+    margin-top: 0.5vw;
+    margin-bottom: 1vw;
 }
 
+.pic-ctn {
+    width: 100vw;
+    height:200px;
 
-
-#carou {
-    position: relative;
-    width: 320px;
-    margin: 0 auto 0 auto;
-    perspective: 1000px;
-    
   }
   
-  #carou_1 {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  transform-style: preserve-3d; 
-  animation: rotate360 60s infinite forwards linear;
-}
-  .carou_face { 
+  @keyframes display {
+    0% {
+      transform: translateX(200px);
+      opacity: 0;
+    }
+    10% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+    20% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+    30% {
+      transform: translateX(-200px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(-200px);
+      opacity: 0;
+    }
+  }
+  
+  .pic-ctn {
+    position: relative;
+    width: 100vw;
+    height: 300px;
+  }
+  
+  .pic-ctn > img {
     position: absolute;
-    width: 15vw;
-    height: 15vh;
-    top: 1vw;
-    left:3vw;
-    right: 3vw;
-    background-size: cover;
-    box-shadow:inset 0 0 0 1500px rgba(0,0,0,0.5);
-    display: flex;
+    top: 0;
+    left: calc(50% - 100px);
+    opacity: 0;
+    animation: display 10s infinite;
   }
   
-  .carou_face > span {
-    margin: auto;
-    font-size: 2vw;
-    color: white;
+  img:nth-child(2) {
+    animation-delay: 2s;
   }
-  
-  
-  .carou_face:nth-child(1) {
-    background-image: url("https://images.pexels.com/photos/1141853/pexels-photo-1141853.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
-    transform: rotateY(  0deg) translateZ(430px); }
-  .carou_face:nth-child(2) { 
-    background-image: url("https://images.pexels.com/photos/1258865/pexels-photo-1258865.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
-      transform: rotateY( 40deg) translateZ(430px); }
-  .carou_face:nth-child(3) {
-    background-image: url("https://images.pexels.com/photos/808466/pexels-photo-808466.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
-    transform: rotateY( 80deg) translateZ(430px); }
-  .carou_face:nth-child(4) {
-    background-image: url("https://images.pexels.com/photos/1394841/pexels-photo-1394841.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
-    transform: rotateY(120deg) translateZ(430px); }
-  .carou_face:nth-child(5) { 
-    background-image: url("https://images.pexels.com/photos/969679/pexels-photo-969679.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
-   transform: rotateY(160deg) translateZ(430px); }
-  .carou_face:nth-child(6) { 
-    background-image: url("https://images.pexels.com/photos/1834400/pexels-photo-1834400.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
-   transform: rotateY(200deg) translateZ(430px); }
-  .carou_face:nth-child(7) { 
-    background-image: url();
-   transform: rotateY(240deg) translateZ(430px); }
-  .carou_face:nth-child(8) {
-    background-image: url("https://images.pexels.com/photos/135018/pexels-photo-135018.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
-    transform: rotateY(280deg) translateZ(430px); }
-  .carou_face:nth-child(9) {
-    background-image: url("https://images.pexels.com/photos/1175135/pexels-photo-1175135.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
-    transform: rotateY(320deg) translateZ(430px); }
-  
-  
-  
-  @keyframes rotate360{
-    from {
-      transform: rotateY(0deg);
-    }
-    to {
-      transform: rotateY(-360deg);
-    }
+  img:nth-child(3) {
+    animation-delay: 4s;
   }
-  
+  img:nth-child(4) {
+    animation-delay: 6s;
+  }
+  img:nth-child(5) {
+    animation-delay: 8s;
+  }
+
+
 
 
   #underline_0{
