--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .underline{
     width: 100%;
     height: 0.5vw;
-    background-color: rgb(53, 30, 30);
+    background-color: rgb(59, 24, 24););
     margin-top: 0vw;
     
 }
@@ -33,7 +33,7 @@ body{
     width:100%;
     height: auto;
     background-color: black;
-    color: rgb(53, 30, 30);
+    color: rgb(59, 24, 24);
     text-align: center;
     font-size: 1vw;
     float: none;
@@ -53,20 +53,23 @@ body{
 }
 
 #top_titre{
-    color: rgb(71, 32, 32);
+    color: rgb(59, 24, 24);
     font-size: 3vw;
     font-family: "AmericanText";
     padding: auto;
     margin-top: 5vw;
+    text-shadow: white 1px 1px 1px ;
        
 }
 
 
 #top_slogan{
-    color: rgb(71, 32, 32);
+    color: rgb(59, 24, 24);
     font-size: 1.5vw;
+    font-weight: 800;
     font-family: "AmericanText";
     text-align: center;
+    text-shadow: red 1px 1px 1px ;
     margin-right: 5vw;
     text-decoration: underline;   
 }
@@ -130,7 +133,7 @@ display: inline-block;
     border-top-right-radius: 16%;
     border-bottom-left-radius:15%;
     border-bottom-right-radius:15%;
-    background-color: rgb(53, 30, 30);
+    background-color: rgb(59, 24, 24);
     color: white;
     text-decoration: none;
     font-family: "AmericanText";
@@ -140,7 +143,7 @@ display: inline-block;
 
 #bg_1{
     background-color: black;
-    height: 22vh;
+    height: 24vh;
     width: auto;
 }
 .pic{
@@ -185,6 +188,7 @@ display: inline-block;
     position: relative;
     width: 100vw;
     height: 300px;
+  
   }
   
   .pic-ctn > img {
@@ -192,6 +196,7 @@ display: inline-block;
     left: calc(50% - 100px);
     opacity: 0;
     animation: display 10s infinite;
+    border: white 0.5vw solid;
   }
   
   img:nth-child(2) {
@@ -213,5 +218,5 @@ display: inline-block;
   #underline_0{
     width: 100%;
     height: 0.5vw;
-    background-color: rgb(53, 30, 30);
+    background-color: rgb(59, 24, 24);
   }
