--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 .underline{
     width: 100%;
     height: 0.5vw;
-    background-color: rgb(59, 24, 24););
-    margin-top: 0vw;
+    background-color: rgb(59, 24, 24);
+
     
 }
 
