--- a/style.css
+++ b/style.css
@@ -15,16 +15,16 @@
 header{
     margin: 0%;
     padding: 0%;
-    width: 100%;
-    height: auto;
+    max-width:auto ;
+    min-width: auto;
 
 }
 
 body{
     margin: 0%;
     padding: 0%;
-    width: auto;
-    height: auto;
+    max-width:auto ;
+    min-width: auto;
  
 }
 
