--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ header{
 body{
     margin: 0%;
     padding: 0%;
-
+  background-color: black;
  
 }
 
@@ -272,7 +272,7 @@ display: inline-block;
   margin-left: 6vw;
 }
 #sous_menu_1{
-  margin-left: -9vw;
+  margin-left: -5vw;
 
 }
 .sous_menu_a{
