--- a/style.css
+++ b/style.css
@@ -171,11 +171,11 @@ display: inline-block;
 }
 .pic{
     background-color: black;
-    height: 25vh;
-    width: 30vw;
-    margin-top: 1vw;
-    margin-bottom: 1vw;
-    margin-left: -10vw;
+    height: 30%;
+    width: 20%;
+    margin-top: 2vw;
+    margin-bottom: 2vw;
+    margin-left: -4vw;
 }
 
 .pic-ctn {
@@ -205,11 +205,7 @@ display: inline-block;
       opacity: 0;
     }
   }
-  
-  .pic-ctn {
-    width:50%;
-    height:200px;
-  }
+
   
   .pic-ctn > img {
     position: absolute;
@@ -241,7 +237,7 @@ display: inline-block;
     height: 0.5vw;
     background-color: rgb(59, 24, 24);
     border: 0.2vw solid white;
-    margin-top: 4vw;
+    margin-top: 9vw;
   }
 #ligne_1{
   background: linear-gradient(360deg, rgb(59, 24, 24), rgb(255, 255, 255,)) ;
@@ -364,23 +360,26 @@ border: 0.5vw solid rgb(59, 24, 24);
 
 .pic{
   background-color: black;
-  height: 30vh;
-  width: 35vw;
+  height: 25%;
+  width: 20%;
   margin-top: 1vw;
-  margin-bottom: 1vw;
-  margin-left: -10vw;
+  margin-bottom: 0vw;
+  margin-left:10vw;
 }
 
 
-
-
+  .pic-ctn {
+    width:50%;
+    height:200px;
+  }
 
 
 #underline_0{
     width: auto;
     background-color:rgb(59, 24, 24);
     height:1vw;
-    margin-top: 9vw;
+    margin-top: 5vw;
+
 }
 
 
