--- a/style.css
+++ b/style.css
@@ -164,6 +164,53 @@ display: inline-block;
   font-size: 2vw;
 }
 
+.sous_menu_li #deroulant {
+  border: 0.5vw groove white ;
+  margin-left: 7vw ;
+  padding: 0;
+}
+
+#deroulant li{
+  float: left;
+  padding: 0;
+  text-align: center;
+  list-style: none;
+}
+
+#deroulant li a{
+display: block;
+color: white;
+background-color: rgb(59, 24, 24);
+font-family: "americantext";
+font-size: 1.5vw;
+text-decoration: none;
+padding:2vw;
+}
+
+#deroulant li:hover{
+
+border-top:0.5vw groove white;
+border-bottom:0.5vw groove white;
+
+}
+
+#deroulant{
+  display: none;
+}
+
+#sous_menu .sous_menu_li:hover #deroulant{
+  display: block;
+}
+
+#sous_menu .sous_menu_li:hover #deroulant li{
+  float: none;
+} 
+
+#sous_menu .sous_menu_li #deroulant {
+
+  position: absolute;
+}
+
 #bg_1{
     background-color: black;
     height: 24vh;
@@ -172,7 +219,7 @@ display: inline-block;
 .pic{
     background-color: black;
     height: 30%;
-    width: 20%;
+    width: 25%;
     margin-top: 2vw;
     margin-bottom: 2vw;
     margin-left: -4vw;
@@ -255,8 +302,8 @@ display: inline-block;
 margin-left:2vw;  
 margin-top: 1vw;
 margin-bottom: 1vw;
-height: 50vh;
-width: 15vw;
+height: 25%;
+width: 15%;
 border: 0.5vw solid rgb(59, 24, 24);
 
 }
@@ -273,8 +320,44 @@ border: 0.5vw solid rgb(59, 24, 24);
 
 
 
+footer{
+  width: auto;
+  height: auto;
+  text-align: center;
+  font-size: 1.3vw;
+  font-family:"americantext";
+}
 
-  @media screen and (max-width: 1024px) 
+#lien_utile{
+  margin-top: 1vw;
+}
+
+#lien_utile >a{
+  margin-top: 1vw;
+  text-decoration: underline;
+  color: white;
+}
+#copy_right{
+  margin-top: 5vw;
+  color: white;
+  text-align: center;
+
+}
+
+
+
+
+#underline_2{
+  width: 100%;
+  height: 0.5vw;
+  background-color: rgb(59, 24, 24);
+  border: 0.2vw solid white;
+
+}
+
+
+
+  @media screen and (max-width: 1080px) 
 {
 
   .underline
@@ -358,13 +441,30 @@ border: 0.5vw solid rgb(59, 24, 24);
 
 }
 
+#deroulant li a{
+  display: block;
+  color: white;
+  background-color: rgb(59, 24, 24);
+  font-family: "americantext";
+  font-size: 1vw;
+  text-decoration: none;
+  padding:2vw;
+  }
+
+
+.sous_menu_li #deroulant {
+  border: 0.5vw groove white ;
+  margin-left: 14vw ;
+  padding: 0;
+}
+
 .pic{
   background-color: black;
-  height: 25%;
-  width: 20%;
-  margin-top: 1vw;
+  height: 20%;
+  width: 35%;
+  margin-top: 2vw;
   margin-bottom: 0vw;
-  margin-left:10vw;
+  margin-left:0vw;
 }
 
 
@@ -378,7 +478,7 @@ border: 0.5vw solid rgb(59, 24, 24);
     width: auto;
     background-color:rgb(59, 24, 24);
     height:1vw;
-    margin-top: 5vw;
+    margin-top: 2vw;
 
 }
 
@@ -398,8 +498,8 @@ border: 0.5vw solid rgb(59, 24, 24);
 margin-left:2vw;  
 margin-top: 1vw;
 margin-bottom: 1vw;
-height: 30vh;
-width: 20vw;
+height: 25%;
+width: 15%;
 border: 0.5vw solid rgb(59, 24, 24);
 
 }
