--- a/style.css
+++ b/style.css
@@ -458,6 +458,11 @@ footer{
   padding: 0;
 }
 
+
+#sous_menu .sous_menu_li #deroulant {
+  z-index: 1;
+  position: absolute;
+}
 .pic{
   background-color: black;
   height: 20%;
