--- a/style.css
+++ b/style.css
@@ -397,7 +397,7 @@ footer{
   margin-top: -7vw;
 }
 #sous_menu_1{
-  margin-left: -5vw;
+  margin-left: -6vw;
 
 }
 .sous_menu_a{
@@ -446,7 +446,7 @@ footer{
   color: white;
   background-color: rgb(59, 24, 24);
   font-family: "americantext";
-  font-size: 1vw;
+  font-size: 3vw;
   text-decoration: none;
   padding:2vw;
   }
@@ -454,7 +454,7 @@ footer{
 
 .sous_menu_li #deroulant {
   border: 0.5vw groove white ;
-  margin-left: 14vw ;
+  margin-left: 12vw ;
   padding: 0;
 }
 
@@ -468,7 +468,7 @@ footer{
   height: 20%;
   width: 35%;
   margin-top: 2vw;
-  margin-bottom: 0vw;
+  margin-bottom: -5vw;
   margin-left:0vw;
 }
 
@@ -503,9 +503,27 @@ footer{
 margin-left:2vw;  
 margin-top: 1vw;
 margin-bottom: 1vw;
-height: 25%;
-width: 15%;
+height: 15%;
+width:20%;
 border: 0.5vw solid rgb(59, 24, 24);
+
+}
+
+#lien_utile{
+  margin-top: 1vw;
+}
+
+#lien_utile >a{
+  margin-top: 1vw;
+  text-decoration: underline;
+  color: white;
+  font-size: 2vw;
+}
+#copy_right{
+  margin-top: 5vw;
+  color: white;
+  text-align: center;
+  font-size: 2vw;
 
 }
 
