--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .underline{
-    width: 100%;
+    width: 99.6%;
     height: 0.5vw;
     background-color: rgb(59, 24, 24);
     border:0.2vw solid white ;
@@ -20,16 +20,18 @@ header{
 
 body{
     margin: 0%;
-    padding: 0%;
-    background-color: black;
+    padding: auto;
+    background-image: url(../../image/fond/background_2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 99.5%;
-    cursor: url(curseur/hello/Aero_arrow.cur),pointer;
+   
   }
   
 #top_menu{
     width:100%;
     height: auto;
-    background-color: black;
+    
     color: rgb(59, 24, 24);
     text-align: center;
     font-size: 1vw;
@@ -94,12 +96,12 @@ display: inline-block;
     height: 4vw;
     margin-left: 1vw;
     margin-top: 1vw;
-    cursor: url('curseur/hello/Aero_Prec.cur'),pointer;
+    
 }
 #sous_menu{
     width: 100%;
     height:4vw;
-    background-color: black;
+
 
 }
 
@@ -136,7 +138,7 @@ display: inline-block;
     text-decoration: none;
     font-family: "AmericanText";
     font-size: 2vw;
-    cursor: url('curseur/hello/Aero_Prec.cur'),pointer;
+   
 }
 
 
@@ -177,7 +179,6 @@ font-family: "americantext";
 font-size: 1.5vw;
 text-decoration: none;
 padding:2vw;
-cursor: url('curseur/hello/Aero_Prec.cur'),pointer;
 }
 
 #deroulant li:hover{
@@ -205,7 +206,6 @@ border-bottom:0.5vw groove white;
 }
 
 #bg_1{
-    background-color: black;
     height: 24vh;
     width: auto;
 }
@@ -295,14 +295,15 @@ margin-top: 1vw;
 margin-bottom: 1vw;
 height: 25%;
 width: 15%;
-border: 0.5vw solid rgb(59, 24, 24);
-cursor: url('curseur/hello/Aero_Prec.cur'),pointer;
+border: 0.3vw solid rgb(59, 24, 24);
+border-radius: 20%;
 }
 
 .shop_img img:hover  {
-  border: 0.5vw solid gold;
+  border: 0.3vw solid gold;
   background-color: black;
   opacity: 0.5;
+  box-shadow: 10px 10px 20px white;
 
 }
 
