--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header{
 body{
     margin: 0%;
     padding: auto;
-    background-image: url(../../image/fond/background_2.jpg);
+    background-image: url(/image/fond/background_2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     width: 99.5%;
@@ -371,11 +371,7 @@ footer{
     margin-top: 10vw;
   }
   
-body{
-  background-image: url(../../image/fond/background_2.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+
 
 
   #icone{
