--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header{
 body{
     margin: 0%;
     padding: auto;
-    background-image: url(vampiwelry/image/fond/background_2.jpg);
+    background-image: url(../image/fond/background_2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     width: 99.5%;
@@ -39,14 +39,15 @@ body{
 
 
 #logo{
+  position: absolute;
     float: left;
-    width: 7vw;
-    height: 7vw;
-    margin-top: -10vw;
-    margin-left: 10vw;
-    border: 0.5vw dashed red;
+    width: 15vw;
+    height: 14vw;
+    margin-top: -11vw;
+    margin-left: -45vw;
+    /*border: 0.5vw dashed red;*/
     border-radius: 100%;
-    background-color: white;
+    /*background-color: white;*/
     
 }
 
@@ -386,10 +387,11 @@ footer{
 }
 
 #logo{
-  width: 8vw;
-  height: 8vw;
+  margin-left: -45vw;
+  width: 20vw;
+  height: 20vw;
   margin-top: -10vw;
-  background-color:royalblue;
+  /*background-color:royalblue; */
 }
 
 #top_slogan{
