--- a/page/menu_page/shop.css
+++ b/page/menu_page/shop.css
@@ -42,16 +42,18 @@ body{
 
 
 #logo{
+  position: absolute;
     float: left;
-    width: 7vw;
-    height: 7vw;
-    margin-top: -10vw;
-    margin-left: 10vw;
-    border: 0.5vw dashed red;
+    width: 15vw;
+    height: 14vw;
+    margin-top: -11vw;
+    margin-left: -45vw;
+    /*border: 0.5vw dashed red;*/
     border-radius: 100%;
-    background-color: white;
+    /*background-color: white;*/
     
 }
+
 
 #top_titre{
     color: rgb(59, 24, 24);
@@ -320,10 +322,11 @@ footer{
 }
 
 #logo{
-  width: 8vw;
-  height: 8vw;
+  margin-left: -45vw;
+  width: 20vw;
+  height: 20vw;
   margin-top: -10vw;
-  background-color:royalblue;
+  /*background-color:royalblue; */
 }
 
 #top_slogan{
