--- a/page/menu_page/shop.css
+++ b/page/menu_page/shop.css
@@ -3,6 +3,15 @@
     src: url(../../police/AmericanText.ttf) format("truetype");
 }
 
+
+html{
+  width: 100%;
+  height: auto;
+  background-image: url(/vampiwelry/image/fond/background_2.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .underline{
     width: 99.6%;
     height: 0.5vw;
@@ -26,6 +35,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     width:auto;
+    height: auto;
   
   }
   
