--- a/page/menu_page/shop.css
+++ b/page/menu_page/shop.css
@@ -31,9 +31,9 @@ body{
   
     margin: 0%;
     padding:auto;
-    background-image: url(../../image/fond/background_2.jpg);
+   /* background-image: url(../../image/fond/background_2.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover;*/
     width:auto;
     height: auto;
   
