--- a/page/menu_page/shop.css
+++ b/page/menu_page/shop.css
@@ -310,8 +310,8 @@ footer{
 {
 
   html{
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
     background-image: url(/vampiwelry/image/fond/background_2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -324,7 +324,7 @@ footer{
    /* background-image: url(../../image/fond/background_2.jpg);
     background-repeat: no-repeat;
     background-size: cover;*/
-    width:auto;
+    width:100%;
     height: 100%;
   
   }
