--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 }
 
 html{
-  width: auto;
-  height: auto;
+  width: 100%;
+  height:100%;
   background-image: url(/vampiwelry/image/fond/background_2.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -27,9 +27,9 @@ header{
 
 body{
     margin: 0%;
-    padding: auto;
-    width: auto;
-    height: auto;
+    padding: 0%;
+    width: 100%;
+    height: 100%;
   }
   
 #top_menu{
