--- a/page/menu_page/shop.css
+++ b/page/menu_page/shop.css
@@ -324,8 +324,8 @@ footer{
    /* background-image: url(../../image/fond/background_2.jpg);
     background-repeat: no-repeat;
     background-size: cover;*/
-    width:100%;
-    height: 100%;
+    width:auto;
+    height: auto;
   
   }
   .underline
