--- a/style.css
+++ b/style.css
@@ -367,8 +367,8 @@ footer{
 
 
   html{
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
     background-image: url(/vampiwelry/image/fond/background_2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
