--- a/style.css
+++ b/style.css
@@ -4,9 +4,12 @@
 }
 
 html{
+  width: auto;
+  height: auto;
   background-image: url(/vampiwelry/image/fond/background_2.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: scroll;
 }
 .underline{
     width: 99.6%;
@@ -25,9 +28,9 @@ header{
 
 body{
     margin: 0%;
-    padding: 0%;
-    width: 100%;
-    height: 100%;
+    padding: auto;
+    width: auto;
+    height: auto;
   }
   
 #top_menu{
