--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@font-face {
+@font-face{
     font-family: "AmericanText";
     src: url(police/AmericanText.ttf) format("truetype");
 }
@@ -365,37 +365,28 @@ footer{
 
 /*MES MEDIA MAW 1080PX */
 
-  @media screen and (max-width: 1080px) 
-{
-
-
-  html{
-    width: 100%;
-    height: 100%;
+  @media screen and (max-width: 1080px){
+html{
+    width: auto;
+    height: auto;
     background-image: url(/vampiwelry/image/fond/background_2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-  }
-
-  body{
+}
+body{
     margin: 0%;
     padding: auto;
     width: auto;
     height: auto;
    
-  }
-  .underline
-  {
+}
+.underline{
     width: 99,6;
     background-color:rgb(59, 24, 24);
     height:1vw;
     margin-top: 10vw;
-  }
-  
-
-
-
-  #icone{
+}
+#icone{
     width: 5vw;
     height: 5vw;
     margin-left: 1vw;
@@ -406,7 +397,6 @@ footer{
   font-size: 8vw;
 
 }
-
 #logo{
   margin-left: -45vw;
   width: 20vw;
@@ -414,7 +404,6 @@ footer{
   margin-top: -10vw;
   /*background-color:royalblue; */
 }
-
 #top_slogan{
 
   font-size: 2.5vw;
@@ -430,8 +419,6 @@ footer{
   margin-top:8.8vw;
   margin-left: 1vw;
 }
-
-
 .sous_menu_a {
   display: inline-block;
   border-top: 0.3vw solid white;
@@ -447,7 +434,6 @@ footer{
   font-family: "AmericanText";
   font-size: 3vw;
 }
-
 .sous_menu_a:hover{
 
   display: inline-block;
@@ -465,7 +451,6 @@ footer{
   font-size: 3vw;
 
 }
-
 #deroulant li a{
   display: block;
   color: white;
@@ -474,16 +459,12 @@ footer{
   font-size: 3vw;
   text-decoration: none;
   padding:2vw;
-  }
-
-
+}
 .sous_menu_li #deroulant {
   border: 0.5vw groove white ;
   margin-left: 12vw ;
   padding: 0;
 }
-
-
 #sous_menu .sous_menu_li #deroulant {
   z-index: 1;
   position: absolute;
@@ -496,13 +477,9 @@ footer{
   margin-bottom: -5vw;
   margin-left:0vw;
 }
-
-
   .pic-ctn {
     width:50%;
-  }
-
-
+}
 #underline_0{
     width: 99.6;
     background-color:rgb(59, 24, 24);
@@ -510,15 +487,9 @@ footer{
     margin-top: 2vw;
 
 }
-
-
-
-
-
 #lien_utile{
   margin-top: 1vw;
 }
-
 #lien_utile >a{
   margin-top: 1vw;
   text-decoration: underline;
@@ -532,7 +503,5 @@ footer{
   font-size: 2vw;
 
 }
-
-
 
 }
