--- a/page/menu_page/shop.css
+++ b/page/menu_page/shop.css
@@ -240,6 +240,7 @@ border-bottom:0.5vw groove white;
   height: 10vw;
   margin-top: 2vw;
   border:0.2vw solid rgb(59, 24, 24) ;
+  text-align: center;
 
 }
 .titre_collier{
