--- a/page/product/product.css
+++ b/page/product/product.css
@@ -247,6 +247,7 @@ border-bottom:0.5vw groove white;
     text-align: left;
     font-size: 3vw;
     font-family: "americantext";
+    text-shadow: 0px 0px 8px white;
 }
 /*image_product*/
 .image_product img{
@@ -505,7 +506,8 @@ footer{
     text-align: center;
     border: 0.3vw solid black;
     background-color: rgba(59, 24, 24, 0.513);
-    width: 83VW;
+    width: 83vw;
+    height: 100vw;
     margin-left: 10%;
 }
 /*titre*/
@@ -527,8 +529,8 @@ footer{
 .image_product img:hover{
     z-index: 3;
     position: relative;
-    width:35vw;
-    height:35vw;
+    width:33vw;
+    height:33vw;
 
 }
 /*description product*/
@@ -579,7 +581,7 @@ footer{
 .prix{
     float: right;
     margin-right: 0.5vw;
-    margin-top: -3.5vw;
+    margin-top: 0vw;
     font-size: 2vw;
     border: 0.2vw solid black;
     padding: 0.5vw;
