--- a/page/product/product.css
+++ b/page/product/product.css
@@ -600,8 +600,8 @@ footer{
 }
 .panier a{
     text-decoration: none;
-    color: black;
-    background-color: rgb(59, 24, 24);
+    color: white;
+    background-color: black;
     border: 0.2vw solid black;
 }
 
